plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.15'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'org.owasp.dependencycheck' version '12.1.0'
}

group = 'com.kts'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

configurations.configureEach {
    exclude group: 'com.spotify', module: 'docker-client'
    // iText 7.2.5 pulls bcprov/bcpkix/bcutil jdk15on:1.70 (CVEs fixed in 1.78).
    // Exclude the legacy jdk15on variants globally; the project already declares jdk18on:1.78.1
    // which provides the same classes under the renamed artifact IDs (BC renamed at v1.72).
    exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
    exclude group: 'org.bouncycastle', module: 'bcpkix-jdk15on'
    exclude group: 'org.bouncycastle', module: 'bcutil-jdk15on'

    resolutionStrategy {
        force 'com.github.docker-java:docker-java-api:3.4.2'
        force 'com.github.docker-java:docker-java-transport:3.4.2'
        force 'com.github.docker-java:docker-java-transport-zerodep:3.4.2'
    }
}

repositories {
    mavenCentral()
    google()
}

dependencyManagement {
    imports {
        mavenBom 'com.google.cloud:libraries-bom:26.60.0'
        mavenBom 'com.google.cloud:spring-cloud-gcp-dependencies:7.2.0'
        mavenBom 'software.amazon.awssdk:bom:2.25.10'
    }
    dependencies {
        // CVE-2025-48924: commons-lang3 3.17.0 — patched in 3.18.0
        dependency 'org.apache.commons:commons-lang3:3.18.0'
        // CVE-2026-34477..34481, CVE-2025-68161: log4j-api 2.24.3 — patched in 2.25.0
        dependency 'org.apache.logging.log4j:log4j-api:2.25.0'
        // CVE-2025-7962: angus-mail 2.0.4 não existe no Maven Central; 2.0.3 (BOM) — CVSS<9.0, não bloqueia build
    }
}

dependencies {
    // CORE
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-integration'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // DATA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    runtimeOnly 'org.postgresql:postgresql'
    testRuntimeOnly 'com.h2database:h2'

    // OBSERVABILITY
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'io.micrometer:micrometer-tracing-bridge-otel'
    implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
    implementation 'net.logstash.logback:logstash-logback-encoder:8.0'

    // DOCUMENTS / PDF
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation 'com.itextpdf:kernel:7.2.5'
    implementation 'com.itextpdf:layout:7.2.5'
    implementation 'com.itextpdf:sign:7.2.5'

    // UTILITIES
    implementation 'commons-net:commons-net:3.10.0'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    compileOnly 'org.projectlombok:lombok'

    // SECURITY
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.springframework.security:spring-security-crypto'

    // AWS
    implementation 'software.amazon.awssdk:rekognition'
    implementation 'software.amazon.awssdk:s3'

    // CRYPTO
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'

    // TEST
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    testImplementation 'io.projectreactor:reactor-test'

    testImplementation platform('org.testcontainers:testcontainers-bom:1.21.2')
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('bootBuildImage') {
    builder = 'paketobuildpacks/builder-jammy-base'
    imageName = '489540979930.dkr.ecr.sa-east-1.amazonaws.com/kronos:latest'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()

    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }

    systemProperty 'spring.profiles.active', System.getProperty('spring.profiles.active', 'test')

    environment 'DOCKER_HOST', System.getenv('DOCKER_HOST') ?: 'unix:///var/run/docker.sock'

    testLogging {
        events = ['passed', 'skipped', 'failed']
        exceptionFormat = 'full'
        showStandardStreams = true
    }
}

tasks.named('test') {
    finalizedBy(tasks.named('jacocoTestReport'))
}

jacoco {
    toolVersion = '0.8.12'
}

tasks.named('jacocoTestReport') {
    dependsOn(tasks.named('test'))
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
}

tasks.named('jacocoTestCoverageVerification') {
    dependsOn(tasks.named('test'))
    violationRules {
        rule {
            enabled = true
            element = 'BUNDLE'

            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.40
            }

            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.30
            }
        }
    }
}

tasks.named('check') {
    dependsOn(tasks.named('jacocoTestCoverageVerification'))
}

dependencyCheck {
    failBuildOnCVSS = 9.0f
    formats = ['HTML', 'JSON']
    suppressionFile = file('dependency-check-suppressions.xml').exists() ? file('dependency-check-suppressions.xml').absolutePath : null
    analyzers {
        assemblyEnabled = false
        ossIndexEnabled = false  // Sonatype OSS Index requires credentials; disable to avoid 401 noise
    }
    nvd {
        // Reads from env var NVD_API_KEY or, as fallback, from nvdApiKey in ~/.gradle/gradle.properties
        apiKey = System.getenv('NVD_API_KEY') ?: (project.findProperty('nvdApiKey') ?: '')
    }
}

tasks.register('dataJpaTest', Test) {
    description = 'Executa apenas os testes JPA com PostgreSQL/Testcontainers'
    group = 'verification'

    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    include '**/*DataJpaTest.class'
    include '**/*RepositoryTest.class'

    shouldRunAfter(tasks.named('unitTest'))

    useJUnitPlatform()

    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }

    systemProperty 'spring.profiles.active', 'test'
    environment 'DOCKER_HOST', System.getenv('DOCKER_HOST') ?: 'unix:///var/run/docker.sock'
}

tasks.register('unitTest', Test) {
    description = 'Executa apenas os testes unitários, excluindo JPA/integracao'
    group = 'verification'

    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    useJUnitPlatform()

    include '**/*Test.class'

    exclude '**/*DataJpaTest.class'
    exclude '**/*RepositoryTest.class'
    exclude '**/*IntegrationTest.class'

    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }

    systemProperty 'spring.profiles.active', 'test'
}
